--- a/index.html
+++ b/index.html
@@ -3,21 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <link rel="stylesheet" href="css/reset.css"
-    <link rel="stylesheet" href="css/style.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <title>RESPONSIVE-8-9</title>
+    <!-- section1-header -->
 </head>
-<header>
-    <nav>
-        <ul>
-            <li>
-                <<a href="#"></a>
-            </li>
-        </ul>
-    </nav>
+<header class="top-box">
+    <div class="starter-left">
+        <img src="images/web.png"alt="web logo"> 
+    </div>
+    <div class="navigation">
+        <nav class ="starter-right">
+            <ul class="uls">
+                <li class="lis">
+                    <a href="#">HOME</a>
+                </li>
+                <li class="lis">
+                    <a href="#">PORTFOLIO</a>
+                 </li>
+                 <li class="lis active">
+                    <a href="#">ABOUT</a>
+                  </li>
+                 <li>
+                     <a href="#">BLOG</a>
+                 </li>
+                  <li class="lis active">
+                     <a href="#">CONTACT</a>
+                  </li>
+            </ul>
+         </nav>
+    </div>
+    <div class="iconi">
+        <i class="fa-solid fa-bars"></i>
+   </div>
+</div>
 </header>
 <body>
-    <p>ninonninonin</p>
+    <!-- section 2 -->
+    <section>
+        <div class="mid-box">
+            <div class="left-container">
+                <h1 class="h1">Provide You best Best Ui Service</h1>
+                <p class="p1">Mobile App Design and Development Studio. You can hire us</p>
+                <div class="radius box">
+                    <img class="klikimage" src="images/waving-hand.png" alt="waving hand">
+                    <p class="wave-klik-text">Wave Me</p>
+                </div>
+            </div>
+            <div class="right-container">
+                <img class="pair" src="sittingpair.png" alt="pair working">
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- section 3 -->
+
+    <section class="bot-box">
+        <div class="text-block">
+            <h4 class="h4">OUR SERVICES</h4>
+            <h3 class="h3">We Provide Best Quality Service </h3>
+            <p class="p3">Our commitment to quality ensures that your applications get the best UI design possible. UI/UX design is more than just pixels and animations, but the entire application experience.</p>
+
+        </div>
+        <div class="sameboxes">
+            <div class="boxes">
+                <img class="images" src="images/data.png" alt="data">        
+                <h3 class="line1text">Website Ui</h3>
+                <p class="line2text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
+                <div class="radius2-box">
+                    <p class="klik-text2">Read More</p>       
+                </div>
+            </div>
+            <div class="boxes">
+                <img class="images" src="images/paint.png" alt="paint">
+                <h3 class="line1text">ReDesign</h3>
+                <p class="line2text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
+                <div class="radius2-box">
+                    <p class="klik-text2">Read More</p> 
+                </div>
+            </div>
+            <div class="boxes">
+                <img class="images" src="images/phone.png" alt="phone">        
+                <h3 class="line1text">Application Ui</h3>
+                <p class="line2text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
+                <div class="radius2-box">
+                    <p class="klik-text2">Read More</p> 
+                </div>   
+            </div>
+            <div class="boxes">
+                <img class="images" src="images/repair.png" alt="repair">        
+                <h3 class="line1text">Mobile App Ui</h3>
+                <p class="line2text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
+                <div class="radius2-box">
+                    <p class="klik-text2">Read More</p> 
+                </div>   
+            </div>
+            <div class="boxes">
+                <img class="images" src="images/app.png" alt="app">        
+                <h3 class="line1text">Web App Ui</h3>
+                <p class="line2text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
+                <div class="radius2-box">
+                    <p class="klik-text2">Read More</p> 
+                </div>   
+            </div>
+            <div class="boxes">
+                <img class="images" src="images/registration.png" alt="registration">        
+                <h3 class="line1text">Web Elements</h3>
+                <p class="line2text">Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
+                <div class="radius2-box">
+                    <p class="klik-text2">Read More</p> 
+                </div>   
+            </div>
+    </div>
+</section>
 </body>
 </html>
